<resources>
    <string name="app_name">Saints To Do</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="date">Date : </string>
    <string name="input_date">Enter Date </string>
    <string name="time">Time : </string>
    <string name="input_time">Enter Time </string>
    <string name="input_label">Task</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="about">About</string>
    <string name="howto">How To Use</string>
    <string name="clear">Clear All</string>
    <string name="title_activity_about">About</string>
    <string name="aboutTxt">This assignment was made for the use of getting (alot) of marks in the class of Mobile Technology taught by Lecturer Mr.Lai
    Partners in designing this application : \nManickam  Murugappan, \nLim Zhi Yi, \nTeh Zhi Hern, \nLam E Shuen</string>
    <string name="title_activity_how_to">How To Use</string>
    <string name="ins1">When you want to add an activity, press the + sign at the bottom of your screen as shown in the diagram above</string>
    <string name="ins2">After you click on the + button, you\'ll be brought to a screen as shown in the diagrams above, don\'t worry if you can\'t see the rest of the UI, just keep on scrolling!</string>
    <string name="ins3">Your tasks will be displayed here after adding with auto sorting based on date and time, if you wish to edit or delete your task just long hold on them.</string>
    <string name="ins4">A dialog will appear like this where you can choose to edit or delete. Delete will remove the selected task and edit will bring you to another screen.</string>
    <string name="ins5">Your selected task\'s data will be brought over here where you can change the values then just press update again.</string>
    <string name="ins6">On the last diagram above, you can see a few options in the menu with About having some info about the app, Clear All will clear every task currently made and How To Use leads to this page</string>
    <string name="title_activity_loading">LoadingActivity</string>
</resources>
